--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-django
-psycopg2-binary
-djangorestframework
-djangorestframework-simplejwt
-pillow
-drf-yasg
-python-decouple
-gunicorn
-whitenoise
-dj-database-url
-django-cors-headers
-redis
-django-celery-beat
-django-celery-result
+django==4.0.7
+psycopg2-binary==2.9.3
+djangorestframework==3.13.1
+djangorestframework-simplejwt==5.2.0
+pillow==9.2.0
+drf-yasg==1.21.3
+python-decouple==3.6
+gunicorn==20.1.0
+whitenoise==6.2.0
+dj-database-url==1.0.0
+django-cors-headers==3.13.0
+redis==4.3.4
+django-celery-beat==2.3.0
+django-celery-results==2.4.0
